# web-scraper

./: .gitignore  .gitmodules  .wget-hsts  Makefile  README copy.md  README.md  oldMakefile  pyproject.toml  requirements.txt
4t-scraper/: main.py
4t-scraper/utils/: HomePageScraper.py  Process.py
chan_scraper/: FullScrape.py  MetaScrape.py  StatScrape.py  main.py
chan_scraper/src/: HTMLDirToScrapeList.py  ScrapeData.py  ScrapeListToHTML.py  ScrapeListToThreadList.py  ThreadData.py  ThreadListToContent.py  URLListToScrapeList.py  __init__.py  depr.py  deprSoupListToMeta.py
chan_scraper/tests/: TestHomepageURLRetriever.py  TestScrapeListToHTML.py  TestScrapeListToThreadList.py  TestSoupListToContent.py  TestSoupListToHTML.py  TestSoupListToThreadList.py  TestThreadListToContent.py  TestURLListToSoupList.py
chan_scraper/utils/: BuildNestDictionary.py  HomepageURLRetriever.py  InitializeNestDictionary.py  SoupListToContent.py  SoupListToHTML.py  SoupListToNestDictionary.py  URLListToSoupList.py  __init__.py
crystalcafe-scraper/: main.py
crystalcafe-scraper/utils/: HTMLCollector.py  HomePageScraper.py  MasterVersionGenerator.py  MetaCollector.py  MetaStatHandler.py  PortionRetriever.py  Process.py  TextCollector.py  __init__.py
params/: crystalcafe.json
src/web-scraper/: __main__.py
src/web_scraper/: __main__.py  fourchan_scrape_and_parse.py  params.py  scrape_and_parse.py  scrape_catalog.py  write_out.py
utils/: HTMLCollector.py  HomePageScraper.py  MetaCollector.py  Process.py  TextCollector.py
wizchan-scraper/: main.py
(+84 files in other folders)
